--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -5,6 +5,11 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="@string/help_menu"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/search_button"
+        android:icon="@drawable/ic_search_white_36dp"
+        android:title="search"
+        app:showAsAction="always" />
 </menu>
