--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#B4723E</color>
     <color name="colorPrimaryDark">#9F5F2D</color>
-    <color name="colorAccent">#4B8DC1</color>
+    <color name="colorAccent">#4b8dc1</color>
 </resources>
