--- a/app/src/main/res/layout/recipe_favourite_item_layout.xml
+++ b/app/src/main/res/layout/recipe_favourite_item_layout.xml
@@ -23,6 +23,12 @@
             android:contextClickable="false"
             app:cardBackgroundColor="@android:color/holo_green_light">
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@mipmap/ic_launcher"
+                android:id="@+id/favouriteImageView" />
+
             <TextView
                 android:text="TextView"
                 android:layout_width="wrap_content"
