moved shit around and made a back button on help activity

--- a/app/src/main/res/layout/activity_subsearch_help.xml
+++ b/app/src/main/res/layout/activity_subsearch_help.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.uottawa.benjaminmacdonald.cooking_app.SubactivitySearchHelp">
+    tools:context="com.uottawa.benjaminmacdonald.cooking_app.HelpSubActivities.SubactivitySearchHelp">
 
     <TextView
         android:layout_width="match_parent"
