--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -8,8 +8,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.uottawa.benjaminmacdonald.cooking_app.HelpActivity"
-    android:background="@drawable/add_button">
+    tools:context="com.uottawa.benjaminmacdonald.cooking_app.HelpActivity">
 
     <LinearLayout
         android:orientation="vertical"
