--- a/app/src/main/res/layout/activity_subcontact.xml
+++ b/app/src/main/res/layout/activity_subcontact.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.uottawa.benjaminmacdonald.cooking_app.SubactivityContact">
+    tools:context="com.uottawa.benjaminmacdonald.cooking_app.HelpSubActivities.SubactivityContact">
 
     <TextView
         android:layout_width="match_parent"
