--- a/app/src/main/res/layout/activity_subfaq.xml
+++ b/app/src/main/res/layout/activity_subfaq.xml
@@ -9,7 +9,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.uottawa.benjaminmacdonald.cooking_app.SubactivityFAQ">
+    tools:context="com.uottawa.benjaminmacdonald.cooking_app.HelpSubActivities.SubactivityFAQ">
 
     <ImageView
         android:layout_width="wrap_content"
