--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -34,7 +34,7 @@
             android:adjustViewBounds="true"
             android:scaleType="fitXY"
             android:id="@+id/recipeImage"
-            android:src="@drawable/doggered"
+            android:src="@drawable/plate_wood_table"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:layout_collapseMode="parallax"
@@ -53,6 +53,16 @@
         android:layout_margin="@dimen/fab_margin"
         android:layout_marginTop="-10dp"
         android:src="@drawable/ic_photo_white_24dp" />
+
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/favouriteButton"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:layout_anchor="@+id/recipeTitle"
+        app:layout_anchorGravity="center|right"
+        android:src="@android:drawable/btn_star_big_off"
+        android:layout_marginRight="35dp" />
 
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -85,9 +95,16 @@
                 android:ems="10"
                 android:id="@+id/recipeTitle"
                 android:hint="Enter a recipe name"
-                android:text="Dog Meat Stew"
                 android:lines="1"
                 android:textSize="26sp" />
+
+            <TextView
+                android:text="Ingredients"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/ingredientsLabel"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="12dp" />
 
             <me.originqiu.library.EditTag
                 android:id="@+id/ingredientsList"
@@ -96,16 +113,34 @@
                 app:tag_layout="@layout/view_default_tag"
                 app:input_layout="@layout/view_default_input_tag"
                 android:theme="@style/AppTheme"
-                android:background="@color/bg_tag" />
+                android:layout_marginBottom="10dp"
+                android:elevation="-24dp" />
+
+            <TextView
+                android:text="Description"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/descriptionLabel"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="12dp" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="20sp"
                 android:lineSpacingExtra="8dp"
-                android:text="A delicacy crafted by chef Tommy Nguyen himself."
+                android:text="Description"
                 android:padding="@dimen/activity_horizontal_margin"
                 android:id="@+id/textDescription" />
+
+            <TextView
+                android:text="Instructions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/instructionLabel"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="12dp" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -124,15 +159,5 @@
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/favouriteButton"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        app:layout_anchor="@+id/recipeTitle"
-        app:layout_anchorGravity="center|right"
-        android:src="@android:drawable/btn_star_big_off"
-        android:layout_marginRight="35dp" />
 
 </android.support.design.widget.CoordinatorLayout>
