--- a/app/src/main/res/layout/recipe_favourite_item_layout.xml
+++ b/app/src/main/res/layout/recipe_favourite_item_layout.xml
@@ -12,8 +12,7 @@
         android:clickable="false">
 
         <android.support.v7.widget.CardView android:id="@+id/favCardView"
-            android:layout_height="125dp"
-            app:cardElevation="4dp"
+            app:cardElevation="6dp"
             android:layout_width="178dp"
             android:clickable="false"
             android:focusable="false"
@@ -21,7 +20,8 @@
             android:layout_marginLeft="16dp"
             android:forceHasOverlappingRendering="false"
             android:contextClickable="false"
-            app:cardBackgroundColor="@android:color/holo_green_light">
+            app:cardBackgroundColor="@android:color/white"
+            android:layout_height="120dp">
 
             <ImageView
                 android:layout_width="match_parent"
@@ -36,10 +36,12 @@
                 android:id="@+id/favTextView"
                 android:clickable="false"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="96dp"
-                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionBar.Subtitle"
-                android:textColor="#FFFFFF"
-                android:textStyle="normal|bold" />
+                android:layout_marginTop="90dp"
+                android:textAppearance="@android:style/TextAppearance.DeviceDefault.Widget.ActionMode.Title"
+                android:fontFamily="sans-serif-medium"
+                android:textSize="18dp"
+                android:textStyle="normal|bold"
+                android:textColor="@android:color/white" />
 
         </android.support.v7.widget.CardView>
     </LinearLayout>
