added grayed out title to spinners

--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -6,6 +6,6 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:textColor="#FFFFFF"
-    android:paddingTop="7dp"
+    android:paddingTop="15dp"
     android:paddingBottom="15dp"
-    />
+    android:textSize="16sp" />
