--- a/app/src/main/res/layout/spinner_item_expanded.xml
+++ b/app/src/main/res/layout/spinner_item_expanded.xml
@@ -8,4 +8,5 @@
     android:textColor="#000000"
     android:paddingTop="7dp"
     android:paddingBottom="7dp"
-    />
+    android:textSize="16sp"
+    android:id="@+id/spinnerItemDrop" />
