--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="colorPrimary">#B4723E</color>
     <color name="colorPrimaryDark">#9F5F2D</color>
     <color name="colorAccent">#4b8dc1</color>
+    <color name="spinnerColor">#FAFAFA</color>
 </resources>
