--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#9F5F2D</color>
     <color name="colorAccent">#4b8dc1</color>
     <color name="spinnerColor">#FAFAFA</color>
+    <color name="textHintColor">#bdbdbd</color>
+    <color name="enabled_color">#000000</color>
+    <color name="disabled_color">#424242</color>
 </resources>
