--- a/app/src/main/res/layout/ingredient_item_layout.xml
+++ b/app/src/main/res/layout/ingredient_item_layout.xml
@@ -7,14 +7,15 @@
     <EditText
         android:id="@+id/ingredientTitle"
         android:hint="ingredient"
-        android:layout_weight="1"
         android:padding="8dp"
         android:textSize="16sp"
+        android:maxWidth="150dp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:gravity="fill_vertical"
         android:textColor="@drawable/edit_text_disabled"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent"
+        android:maxLines="1" />
 
     <EditText
         android:id="@+id/ingredientAmount"
@@ -23,6 +24,8 @@
         android:gravity="center"
         android:padding="8dp"
         android:textSize="16sp"
+        android:maxWidth="100dp"
+        android:inputType="number|numberDecimal"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:textAlignment="center"
