--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -56,6 +56,18 @@
         android:src="@drawable/ic_photo_white_24dp" />
 
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/favouriteButton"
+        android:background="?attr/selectableItemBackgroundBorderless"
+        app:layout_anchor="@+id/recipeTitle"
+        app:layout_anchorGravity="center|right"
+        android:src="@android:drawable/btn_star_big_off"
+        android:layout_marginRight="35dp"
+        android:foregroundGravity="top"
+        android:visibility="visible" />
+
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -128,6 +140,57 @@
                 android:textColor="@drawable/edit_text_disabled" />
 
             <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/typeLabel"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="12dp"
+                android:text="Type" />
+
+            <EditText
+                android:id="@+id/typeText"
+                android:inputType="text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:hint="type of recipe (e.g breakfast)"
+                android:textColor="@drawable/edit_text_disabled" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/categoryLabel"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="12dp"
+                android:text="Category" />
+
+            <EditText
+                android:id="@+id/categoryText"
+                android:inputType="text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="16sp"
+                android:hint="recipe category (e.g Thai)"
+                android:textColor="@drawable/edit_text_disabled" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/healthyLabel"
+                android:textColor="@color/colorAccent"
+                android:layout_marginTop="12dp"
+                android:text="Healthy?" />
+
+            <Spinner
+                android:layout_width="fill_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/healthySpinner"
+                android:layout_weight="1"
+                android:popupBackground="@color/spinnerColor"
+                android:dropDownWidth="fill_parent"
+                android:prompt="@string/healthy"/>
+
+            <TextView
                 android:text="Ingredients"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -143,17 +206,5 @@
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/favouriteButton"
-        android:background="?attr/selectableItemBackgroundBorderless"
-        app:layout_anchor="@+id/recipeTitle"
-        app:layout_anchorGravity="center|right"
-        android:src="@android:drawable/btn_star_big_off"
-        android:layout_marginRight="35dp"
-        android:foregroundGravity="top"
-        android:visibility="visible" />
 
 </android.support.design.widget.CoordinatorLayout>
