--- a/app/src/main/res/layout/recipe_favourite_item_layout.xml
+++ b/app/src/main/res/layout/recipe_favourite_item_layout.xml
@@ -26,7 +26,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                app:srcCompat="@mipmap/ic_launcher"
+                app:srcCompat="@android:color/white"
                 android:id="@+id/favouriteImageView" />
 
             <TextView
