--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -104,10 +104,85 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
-                android:hint="delicious cookies ... yummmm"
+                android:hint="Enter a description"
                 android:id="@+id/textDescription"
                 android:textColor="@drawable/edit_text_disabled"
                 android:textAlignment="viewStart" />
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/labelLayout"
+                android:weightSum="1">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/typeLabel"
+                    android:textColor="@color/colorAccent"
+                    android:layout_marginTop="12dp"
+                    android:text="Type"
+                    android:layout_marginRight="96dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/categoryLabel"
+                    android:textColor="@color/colorAccent"
+                    android:layout_marginTop="12dp"
+                    android:text="Category"
+                    android:layout_marginRight="64dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/healthyLabel"
+                    android:textColor="@color/colorAccent"
+                    android:text="Healthy"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginRight="64dp"
+                    android:layout_weight="0.08" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/optionsLayout"
+                android:weightSum="1">
+
+                <EditText
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/typeText"
+                    android:textSize="18sp"
+                    android:hint="Dinner" />
+
+                <EditText
+                    android:layout_width="120dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/categoryText"
+                    android:hint="Thai"
+                    android:textSize="18sp" />
+
+                <CheckBox
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/healthyCheckBox"
+                    android:layout_marginLeft="16dp"
+                    android:layout_weight="0.08" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/healthOption">
+
+            </LinearLayout>
 
             <TextView
                 android:text="Instructions"
@@ -125,57 +200,6 @@
                 android:textSize="18sp"
                 android:hint="1. Prepare Oven at 450 degrees fahrenheit"
                 android:textColor="@drawable/edit_text_disabled" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/typeLabel"
-                android:textColor="@color/colorAccent"
-                android:layout_marginTop="12dp"
-                android:text="Type" />
-
-            <EditText
-                android:id="@+id/typeText"
-                android:inputType="text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:hint="type of recipe (e.g breakfast)"
-                android:textColor="@drawable/edit_text_disabled" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/categoryLabel"
-                android:textColor="@color/colorAccent"
-                android:layout_marginTop="12dp"
-                android:text="Category" />
-
-            <EditText
-                android:id="@+id/categoryText"
-                android:inputType="text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:hint="recipe category (e.g Thai)"
-                android:textColor="@drawable/edit_text_disabled" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/healthyLabel"
-                android:textColor="@color/colorAccent"
-                android:layout_marginTop="12dp"
-                android:text="Healthy?" />
-
-            <Spinner
-                android:layout_width="fill_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/healthySpinner"
-                android:layout_weight="1"
-                android:popupBackground="@color/spinnerColor"
-                android:dropDownWidth="fill_parent"
-                android:prompt="@string/healthy"/>
 
             <TextView
                 android:text="Ingredients"
