--- a/app/src/main/res/layout/activity_subfaq.xml
+++ b/app/src/main/res/layout/activity_subfaq.xml
@@ -11,20 +11,81 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.uottawa.benjaminmacdonald.cooking_app.HelpSubActivities.SubactivityFAQ">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:srcCompat="@mipmap/ic_launcher"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/imgFAQ" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="51dp"
-        android:id="@+id/txtFAQ"
-        android:text="Placeholder text and placeholder image"
+        android:id="@+id/txtFAQBold"
+        android:text="@string/frequently_asked_questions"
+        android:layout_alignParentStart="true"
+        android:textStyle="bold"
+        android:gravity="center"/>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="20dp"
+        android:layout_weight="0.06"
+        android:layout_marginTop="22dp"
         android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/spc1" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtFAQOne"
+        android:text="The app is slow!"
+        android:textStyle="bold"
+        android:gravity="left"
+        android:layout_below="@+id/spc1"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Your phone may be running out of memory. Please close background applications and restart the app."
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtFAQTwo"
+        android:gravity="left"
+        android:layout_below="@+id/txtFAQOne"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtFAQThree"
+        android:gravity="left"
+        android:textStyle="bold"
+        android:text="Are there instructions on how to use the app?"
+        android:layout_marginTop="13dp"
+        android:layout_below="@+id/txtFAQTwo"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtFAQFour"
+        android:gravity="left"
+        android:text="Please consult the other help pages."
+        android:layout_below="@+id/txtFAQThree"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtFAQFive"
+        android:gravity="left"
+        android:textStyle="bold"
+        android:text="Can I add my own recipes?"
+        android:layout_below="@+id/txtFAQFour"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="14dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtFAQSix"
+        android:gravity="left"
+        android:text="Yes! Please consult the designated help page for adding your own recipes.."
+        android:layout_below="@+id/txtFAQFive"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
