--- a/app/src/main/res/layout/activity_sub_add_own_recipe.xml
+++ b/app/src/main/res/layout/activity_sub_add_own_recipe.xml
@@ -19,13 +19,6 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/spc1"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtAddOwnOne"
-        android:layout_below="@+id/spc1"
-        android:text="@string/to_add_your_own_recipe_begin_by_clicking_the_large_button_at_the_bottom_right_corner_of_the_screen"
-        android:layout_alignParentStart="true" />
 
     <TextView
         android:text="@string/fill_in_the_required_fields_and_add_an_optional_picture_to_complete_the_custom_recipe"
@@ -56,17 +49,6 @@
         android:layout_alignParentStart="true"
         android:layout_marginTop="27dp" />
 
-    <ImageView
-        android:layout_width="120dp"
-        android:layout_height="140dp"
-        android:src="@drawable/recipe_add_screen"
-        android:id="@+id/imgSearchTwo"
-        android:scaleX="1.3"
-        android:scaleY="1.1"
-        android:layout_alignTop="@+id/imgSearchOne"
-        android:layout_toEndOf="@+id/imgSearchOne"
-        android:layout_marginStart="30dp" />
-
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -76,5 +58,24 @@
         android:gravity="center"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtAddOwnOne"
+        android:text="@string/to_add_your_own_recipe_begin_by_clicking_the_large_button_at_the_bottom_right_corner_of_the_screen"
+        android:layout_below="@+id/spc1"
+        android:layout_alignParentStart="true" />
+
+    <ImageView
+        android:layout_width="120dp"
+        android:layout_height="140dp"
+        android:src="@drawable/recipe_add_screen"
+        android:id="@+id/imgSearchTwo"
+        android:scaleX="1.9"
+        android:scaleY="1.8"
+        android:layout_marginStart="30dp"
+        android:layout_alignTop="@+id/imgSearchOne"
+        android:layout_toEndOf="@+id/imgSearchOne" />
 
 </RelativeLayout>
