--- a/app/src/main/res/layout/ingredient_list_footer.xml
+++ b/app/src/main/res/layout/ingredient_list_footer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingTop="7dip"
@@ -10,19 +11,21 @@
 
     <LinearLayout
         android:id="@+id/footer_layout"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_gravity="center">
 
-        <Button
-            android:text="Add Another Ingredient"
-            android:layout_width="match_parent"
+        <ImageButton
+            android:layout_width="35dp"
             android:layout_height="wrap_content"
+            android:layout_marginRight="300dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            app:srcCompat="@android:drawable/ic_input_add"
             android:id="@+id/addIngredient"
             android:layout_weight="1"
             android:onClick="addIngredientRow (RecipeActivity)" />
 
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
