--- a/app/src/main/res/drawable/tag_background.xml
+++ b/app/src/main/res/drawable/tag_background.xml
@@ -3,15 +3,12 @@
     android:shape="rectangle">
 
     <padding
+        android:bottom="2dp"
+        android:top="2dp"
         android:left="10dp"
         android:right="10dp" />
 
-    <!--<stroke android:width="2dp"-->
-        <!--android:color="@color/colorAccent"-->
-        <!--/>-->
-
-
-    <solid android:color="#B6B6B6" />
+    <solid android:color="#B8E986" />
     <corners android:bottomRightRadius="8dp" android:bottomLeftRadius="8dp"
         android:topLeftRadius="8dp" android:topRightRadius="8dp"/>
 </shape>
