--- a/app/src/main/res/layout/recipe_favourite_item_layout.xml
+++ b/app/src/main/res/layout/recipe_favourite_item_layout.xml
@@ -26,6 +26,7 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:scaleType="fitXY"
                 app:srcCompat="@android:color/white"
                 android:id="@+id/favouriteImageView" />
 
