--- a/app/src/main/res/menu/menu_recipe.xml
+++ b/app/src/main/res/menu/menu_recipe.xml
@@ -2,16 +2,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.uottawa.benjaminmacdonald.cooking_app.MainActivity">
+
+    <item
+        android:id="@+id/favourite_button"
+        android:icon="@drawable/ic_favorite_border_white_24dp"
+        android:title="Favourite"
+        app:showAsAction="always" />
+
     <item
         android:id="@+id/save_button"
         android:icon="@drawable/ic_done_white_36dp"
-        android:title="save"
+        android:title="Save"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/edit_button"
         android:icon="@drawable/ic_mode_edit_white_24dp"
-        android:title="edit"
+        android:title="Edit"
         app:showAsAction="always" />
 
     <item
