--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -204,7 +204,7 @@
             <ListView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:stackFromBottom="true"
+                android:stackFromBottom="false"
                 android:transcriptMode="alwaysScroll"
                 android:divider="@null"
                 android:dividerHeight="0dp"
