added deleting and filtering

--- a/app/src/main/res/layout/ingredient_item_layout.xml
+++ b/app/src/main/res/layout/ingredient_item_layout.xml
@@ -64,8 +64,7 @@
         android:adjustViewBounds="true"
         android:scaleType="fitCenter"
 
-        android:background="?attr/selectableItemBackgroundBorderless"
-        android:onClick="deleteIngredientRowTEST (RecipeActivity)" />
+        android:background="?attr/selectableItemBackgroundBorderless" />
 
 
 </RelativeLayout>
