--- a/app/src/main/res/layout/spinner_item_white.xml
+++ b/app/src/main/res/layout/spinner_item_white.xml
@@ -8,4 +8,4 @@
     android:textColor="#FFFFFF"
     android:paddingTop="15dp"
     android:paddingBottom="15dp"
-    android:textSize="16sp" />
+    android:textSize="14dp" />
