--- a/app/src/main/res/layout/recipe_item_layout.xml
+++ b/app/src/main/res/layout/recipe_item_layout.xml
@@ -42,6 +42,7 @@
             android:text="TextView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/textView" />
+            android:id="@+id/descriptionText"
+            android:layout_marginRight="28dp" />
     </LinearLayout>
 </LinearLayout>
